<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/detail_motion">

    <ImageView
        android:id="@+id/detail_backdrop"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/textGreyColor"
        android:contentDescription="@string/backdrop"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/poster_container"
        android:layout_width="150dp"
        android:layout_height="225dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:elevation="3dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9">

        <ImageView
            android:id="@+id/detail_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryLight"
            android:contentDescription="@string/poster"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <include
        android:id="@+id/detail_top_container"
        layout="@layout/detail_data_top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_backdrop" />

    <include
        android:id="@+id/data_activity_detail"
        layout="@layout/data_activity_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_top_container" />

    <ImageButton
        android:id="@+id/detail_btn_scroll"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/back"
        android:elevation="4dp"
        android:src="@drawable/ic_chevron"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="95dp" />
</androidx.constraintlayout.motion.widget.MotionLayout>