<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.attribute.DetailAttributeFragment">


    <TextView
        android:id="@+id/textView7"
        style="@style/text_category_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/rating"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/detail_ratingbar"
        style="@style/Base.Widget.AppCompat.RatingBar.Small"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:progressTint="@color/ratingColor"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/detail_rating_value"
        style="@style/text_detail_value_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/number_val"
        app:layout_constraintBottom_toBottomOf="@+id/detail_ratingbar"
        app:layout_constraintStart_toEndOf="@+id/detail_ratingbar"
        app:layout_constraintTop_toTopOf="@+id/detail_ratingbar" />

    <TextView
        android:id="@+id/textView8"
        style="@style/text_category_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/popularity"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ProgressBar
        android:id="@+id/detail_popularity_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progressTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/detail_rating_value"
        app:layout_constraintStart_toStartOf="@+id/detail_ratingbar"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/detail_popularity_value"
        style="@style/text_detail_value_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/number_val"
        app:layout_constraintBottom_toBottomOf="@+id/detail_popularity_bar"
        app:layout_constraintStart_toEndOf="@+id/detail_popularity_bar"
        app:layout_constraintTop_toTopOf="@+id/detail_popularity_bar" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="16dp"
        android:background="@color/divideColor"
        app:layout_constraintTop_toBottomOf="@+id/detail_popularity_bar" />

    <TextView
        android:id="@+id/textView12"
        style="@style/text_category_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <TextView
            android:id="@+id/detail_overview"
            style="@style/text_detail_value_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview" />

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".35" />

</androidx.constraintlayout.widget.ConstraintLayout>